--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             Size of the game board:
             <select class="boardSizeSelect" name="boardSize">
                 <option value="31">small</option>
-                <option value="40">medium</option>
+                <option selected value="40">medium</option>
                 <option value="49">large</option>
             </select>
         </form>
@@ -43,7 +43,7 @@
         <form class='contents_box'>
             Shape of the game board:
             <select class="boardShapeSelect" name="boardShape">
-                <option value="octagon">octagon</option>
+                <option selected value="octagon">octagon</option>
                 <option value="square">square</option>
             </select>
         </form>
