Addition of left dashboard showing stock of pieces
* Change in size of game frame surround
* Addition of category types to pieceTypes array
* Loop through all piece types and creation of dynamic dashboard that updates as new pieces are added and piece number change

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
 
     <!-- Corners added to allow side panels to be exandable -->
-    <div class="corner  top left over_text">
+    <div class="corner top left over_text">
     </div>
 
     <!-- Fixed header with padding underneath-->
@@ -38,8 +38,9 @@
 
     <!-- Expandable (future development) sidebar left -->
     <div class="left sidebar over_text">
+        <div class="stockDashboard">
 
-
+        </div>
     </div>
 
     <div class="left sidebar under_text">
@@ -167,6 +168,9 @@
 
     <!-- The game board object -->
     <script src='board.js'></script>
+
+    <!-- The dashboard object -->
+    <script src='dashboard.js'></script>
 
     <!-- The compass object -->
     <script src='compass.js'></script>
