--- a/index.html
+++ b/index.html
@@ -178,6 +178,9 @@
     <!-- The piece movement object -->
     <script src='movement.js'></script>
 
+    <!-- The pirates object -->
+    <script src='pirates.js'></script>
+
     <!-- The game management object -->
     <script src='gamemanagement.js'></script>
 
