Change to a "Canvas" board to improve graphics
* Addition of canvas node to html
* Dynamic creation of board based on boardSize and boardArray so this main functionality is retained
* Loop to draw octagons for sea and darker octagons for islands 
* Board will be unchanged throughout the game so graphics should be smoother

--- a/index.html
+++ b/index.html
@@ -48,7 +48,11 @@
 
 
     <!-- A div used as a placeholder to which the dynamically generated board is added -->
-    <div class="boardmark"></div>
+    <div class="boardmark">
+        <canvas id="board">
+            the board goes here
+        </canvas>
+    </div>
 
     <!-- Expandable (future development) sidebar right -->
     <div class="right sidebar over_text">
