--- a/index.html
+++ b/index.html
@@ -162,6 +162,9 @@
     <!-- The compass object -->
     <script src='compass.js'></script>
 
+    <!-- The resource object -->
+    <script src='resource.js'></script>
+
     <!-- The piece movement object -->
     <script src='movement.js'></script>
 
