Updating the style of the surround and board

--- a/index.html
+++ b/index.html
@@ -22,19 +22,15 @@
     </div>
 
     <!-- Fixed header with padding underneath-->
-    <div class="the_header over_text">
-        <div class="title_box">
-            Archipelago!
-        </div>
+    <div class="the_header over_text top">
+
     </div>
 
     <!-- Corners added to allow side panels to be exandable -->
     <div class="corner top right over_text">
     </div>
 
-    <div class="the_header under_text">
-    </div>
-    <br> <br>
+
 
     <!-- Expandable (future development) sidebar left -->
     <div class="left sidebar over_text">
@@ -67,12 +63,7 @@
     </div>
 
     <!-- Fixed footer for icon buttons with padding underneath-->
-    <div class="the_footer over_text">
-
-        <!-- Commentary box - Again is temporary in this position just to aid any visitors to site-->
-        <div class='contents_box commentary'>
-            Commentary ...
-        </div>
+    <div class="the_footer over_text bottom">
 
         <!-- Settings icon button-->
         <div class="icon_holder settingsmark">
@@ -102,6 +93,13 @@
             </div>
         </div>
     </div>
+
+
+    <!-- Commentary box - Again is temporary in this position just to aid any visitors to site-->
+        <div class='commentary'>
+            Commentary ...
+        </div>
+
 
     <!-- Corners added to allow side panels to be exandable -->
     <div class="corner bottom right over_text">
