--- a/index.html
+++ b/index.html
@@ -35,7 +35,11 @@
     <!-- Expandable (future development) sidebar left -->
     <div class="left sidebar over_text">
         <div class="stockDashboard">
-
+        </div>
+        <br>
+        <br>
+        <br>
+        <div class="goodsDashboard">
         </div>
     </div>
 
@@ -97,7 +101,7 @@
 
     <!-- Commentary box - Again is temporary in this position just to aid any visitors to site-->
         <div class='commentary'>
-            
+
         </div>
 
 
