--- a/index.html
+++ b/index.html
@@ -36,11 +36,6 @@
     <div class="left sidebar over_text">
         <div class="stockDashboard">
         </div>
-        <br>
-        <br>
-        <br>
-        <div class="goodsDashboard">
-        </div>
     </div>
 
     <div class="left sidebar under_text">
@@ -55,6 +50,8 @@
 
     <!-- Expandable (future development) sidebar right -->
     <div class="right sidebar over_text">
+        <div class="contractDashboard">
+        </div>
     </div>
 
     <div class="right sidebar under_text">
@@ -166,6 +163,9 @@
 
     <!-- The resource object -->
     <script src='resource.js'></script>
+
+    <!-- The contracts object -->
+    <script src='contracts.js'></script>
 
     <!-- The piece movement object -->
     <script src='movement.js'></script>
