Creation of goods icons and placing in commentary
* Goods icons designed for wood, iron, coffee, stone
* Icons added to commentary slider in correct quantity 
* Will be used for quantity-based loading and unloading

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     <!-- Fixed footer for icon buttons with padding underneath-->
     <div class="the_footer over_text bottom">
 
-        <!-- Settings icon button-->
+        <!-- Settings icon button
         <div class="icon_holder settingsmark">
             <div class="settings">
                 <div class="settings_teeth teethrotate0">
@@ -83,7 +83,7 @@
             <div class="icon_text">
                 settings
             </div>
-        </div>
+        </div> -->
 
         <!-- End of turn icon button -->
         <div class="icon_holder endturnmark">
