Variable goods loading / unloading using icons
* Quantity of goods to be loaded / unloaded can be selected by clicking on icons
* Icons change colour to indicate the quantity selected
* Game commentary updated to reflect new functionality
* Selection of quantity integrated into flow of game logic

--- a/index.html
+++ b/index.html
@@ -85,25 +85,28 @@
             </div>
         </div> -->
 
-        <!-- End of turn icon button -->
-        <div class="icon_holder endturnmark">
-            <div class="end_turn">
-            </div>
-            <div class="icon_text">
-                end turn
-            </div>
-        </div>
+
     </div>
 
 
     <!-- Commentary box - Again is temporary in this position just to aid any visitors to site-->
         <div class='commentary'>
-
+            <span id='firstLine'></span><br>
+            <span id='secondLine'></span>
         </div>
 
 
     <!-- Corners added to allow side panels to be exandable -->
     <div class="corner bottom right over_text">
+
+      <!-- End of turn icon button -->
+      <div class="icon_holder endturnmark">
+          <div class="end_turn">
+          </div>
+          <div class="icon_text">
+              end turn
+          </div>
+      </div>
 
       <!-- Settings panel pop up -->
       <div class="settings_popup">
