--- a/index.html
+++ b/index.html
@@ -61,14 +61,28 @@
 
     <!-- Corners added to allow side panels to be exandable -->
     <div class="corner bottom left over_text">
-    </div>
+      <!-- Settings icon button -->
+      <div class="icon_holder settingsmark">
+          <!--div class="settings">
+              <div class="settings_teeth teethrotate0">
+              </div>
+              <div class="settings_teeth teethrotate45">
+              </div>
+              <div class="settings_teeth teethrotate90">
+              </div>
+              <div class="settings_teeth teethrotate135">
+              </div>
+              <div class="settings_inner">
+              </div>
+          </div-->
 
-    <!-- Fixed footer for icon buttons with padding underneath-->
-    <div class="the_footer over_text bottom">
-
-        <!-- Settings icon button
-        <div class="icon_holder settingsmark">
-            <div class="settings">
+      </div>
+      <div class="icon_text">
+          settings
+      </div>
+      <!-- Settings panel pop up -->
+      <div class="settings_popup">
+          <!--div class="settingspopup_inner">
                 <div class="settings_teeth teethrotate0">
                 </div>
                 <div class="settings_teeth teethrotate45">
@@ -77,13 +91,41 @@
                 </div>
                 <div class="settings_teeth teethrotate135">
                 </div>
-                <div class="settings_inner">
+                <div class="settings_inner2">
+                    <span class="settings_close">
+                        &times;
+                    </span>
+                    <br>Changing size or shape of the<br>board will restart the game. -->
+
+                    <!-- Buttons - for the size and shape of the board -->
+                    <!--div class='settings_holder boardSizeSelect'>
+                        Size of the game board:
+                        <div class="settings_button boardSizeSelect_31">
+                            small
+                        </div>
+                        <div class="settings_button boardSizeSelect_40">
+                            medium
+                        </div>
+                    </div>
+
+                    <div class='settings_holder boardShapeSelect'>
+                        Shape of the game board:
+                        <div class="settings_button boardShapeSelect_octagon">
+                            octagon
+                        </div>
+                        <div class="settings_button boardShapeSelect_square">
+                            square
+                        </div>
+                    </div>
                 </div>
-            </div>
-            <div class="icon_text">
-                settings
-            </div>
-        </div> -->
+            </div-->
+        </div>
+    </div>
+
+    <!-- Fixed footer for icon buttons with padding underneath-->
+    <div class="the_footer over_text bottom">
+
+
 
 
     </div>
@@ -108,46 +150,7 @@
           </div>
       </div>
 
-      <!-- Settings panel pop up -->
-      <div class="settings_popup">
-          <div class="settingspopup_inner">
-                <div class="settings_teeth teethrotate0">
-                </div>
-                <div class="settings_teeth teethrotate45">
-                </div>
-                <div class="settings_teeth teethrotate90">
-                </div>
-                <div class="settings_teeth teethrotate135">
-                </div>
-                <div class="settings_inner2">
-                    <span class="settings_close">
-                        &times;
-                    </span>
-                    <br>Changing size or shape of the<br>board will restart the game.
 
-                    <!-- Buttons - for the size and shape of the board -->
-                    <div class='settings_holder boardSizeSelect'>
-                        Size of the game board:
-                        <div class="settings_button boardSizeSelect_31">
-                            small
-                        </div>
-                        <div class="settings_button boardSizeSelect_40">
-                            medium
-                        </div>
-                    </div>
-
-                    <div class='settings_holder boardShapeSelect'>
-                        Shape of the game board:
-                        <div class="settings_button boardShapeSelect_octagon">
-                            octagon
-                        </div>
-                        <div class="settings_button boardShapeSelect_square">
-                            square
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
     </div>
 
     <!-- Padding for footer -->
