Building 2 - Construction of ships

--- a/index.html
+++ b/index.html
@@ -78,10 +78,17 @@
     </div>
 
 
-    <!-- Commentary box - Again is temporary in this position just to aid any visitors to site-->
+    <!-- Commentary box -->
         <div class='commentary'>
             <span id='firstLine'></span><br>
             <span id='secondLine'></span>
+        </div>
+
+    <!-- Building box -->
+        <div class='building'>
+            <div id='firstBuildLine'></div>
+            <div id='secondBuildLine'></div>
+            <div id='thirdBuildLine'></div>
         </div>
 
 
@@ -125,6 +132,9 @@
 
     <!-- The game management object -->
     <script src='gamemanagement.js'></script>
+
+    <!-- The building object -->
+    <script src='build.js'></script>
 
     <!-- The main javascript file -->
     <script src='main.js'></script>
