Scoring system and scoreboard implementation

--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
 
     <!-- Fixed header with padding underneath-->
     <div class="the_header over_text top">
-
+        <div class="scoreBoard">
+        </div>
     </div>
 
     <!-- Corners added to allow side panels to be exandable -->
@@ -135,6 +136,9 @@
 
     <!-- The building object -->
     <script src='build.js'></script>
+
+    <!-- The building object -->
+    <script src='scoring.js'></script>
 
     <!-- The main javascript file -->
     <script src='main.js'></script>
