Scoredboard slider improvment
* Scoreboard slider separated from header
* Scoreboard slider now slides down if you hover over the (invisible) header at the top of the screen

--- a/index.html
+++ b/index.html
@@ -23,6 +23,11 @@
 
     <!-- Fixed header with padding underneath-->
     <div class="the_header over_text top">
+
+    </div>
+
+    <!-- Scoreboard slider -->
+    <div class='score_header top'>
         <div class="scoreBoard">
         </div>
     </div>
