--- a/index.html
+++ b/index.html
@@ -74,7 +74,9 @@
         </div>
         <!-- Settings panel pop up -->
         <div class="settings_popup">
-
+        </div>
+        <!-- Intro scroll panel pop up -->
+        <div class="scroll_popup">  
         </div>
     </div>
 
