Start of computer opponent automation

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         <div class="settings_popup">
         </div>
         <!-- Intro scroll panel pop up -->
-        <div class="scroll_popup">  
+        <div class="scroll_popup">
         </div>
     </div>
 
@@ -137,6 +137,9 @@
 
     <!-- The pirates object -->
     <script src='pirates.js'></script>
+
+    <!-- The computer opponent object -->
+    <script src='automove.js'></script>
 
     <!-- The game management object -->
     <script src='gamemanagement.js'></script>
