--- a/index.html
+++ b/index.html
@@ -1,156 +1,1 @@
-<!DOCTYPE html>
-
-<!-- This is the main HTML file for the game -->
-<!-- ------------------------------------------>
-<html>
-
-<head>
-    <meta charset="utf-8">
-
-    <!-- Link to style sheets -->
-    <link rel="stylesheet" type="text/css" href="surround.css">
-    <link rel="stylesheet" type="text/css" href="board.css">
-    <link rel="stylesheet" type="text/css" href="pieces.css">
-    <link rel="stylesheet" type="text/css" href="compass.css">
-
-</head>
-
-<body>
-
-    <!-- Corners added to allow side panels to be exandable -->
-    <div class="corner top left over_text">
-    </div>
-
-    <!-- Fixed header with padding underneath-->
-    <div class="the_header over_text top">
-
-    </div>
-
-    <!-- Scoreboard slider -->
-    <div class='score_header top'>
-        <div class="scoreBoard">
-        </div>
-    </div>
-
-    <!-- Corners added to allow side panels to be exandable -->
-    <div class="corner top right over_text">
-    </div>
-
-
-
-    <!-- Expandable (future development) sidebar left -->
-    <div class="left sidebar over_text">
-        <div class="stockDashboard">
-        </div>
-    </div>
-
-    <div class="left sidebar under_text">
-    </div>
-
-
-    <!-- A div used as a placeholder to which the dynamically generated board is added -->
-    <div class="boardmark">
-
-    </div>
-
-    <!-- Expandable (future development) sidebar right -->
-    <div class="right sidebar over_text">
-        <div class="contractDashboard">
-        </div>
-    </div>
-
-    <div class="right sidebar under_text">
-    </div>
-
-    <br>
-
-    <!-- Corners added to allow side panels to be exandable -->
-    <div class="corner bottom left over_text">
-        <!-- Settings icon button -->
-        <div class="icon_holder settingsmark">
-        </div>
-        <div class="icon_text">
-            settings
-        </div>
-        <!-- Settings panel pop up -->
-        <div class="settings_popup">
-        </div>
-        <!-- Intro scroll panel pop up -->
-        <div class="scroll_popup">
-        </div>
-    </div>
-
-    <!-- Fixed footer for icon buttons with padding underneath-->
-    <div class="the_footer over_text bottom">
-
-    </div>
-
-
-    <!-- Commentary box -->
-        <div class='commentary'>
-            <span id='firstLine'></span><br>
-            <span id='secondLine'></span>
-        </div>
-
-    <!-- Building box -->
-        <div class='building'>
-            <div id='firstBuildLine'></div>
-            <div id='secondBuildLine'></div>
-            <div id='thirdBuildLine'></div>
-        </div>
-
-
-    <!-- Corners added to allow side panels to be exandable -->
-    <div class="corner bottom right over_text">
-
-        <!-- End of turn icon button -->
-        <div class="icon_holder endturnmark">
-        </div>
-        <div class="icon_text">
-            end turn
-        </div>
-
-    </div>
-
-    <!-- Padding for footer -->
-    <div class="the_footer under_text">
-
-    </div>
-
-    <!-- The game board object -->
-    <script src='board.js'></script>
-
-    <!-- The dashboard object -->
-    <script src='dashboard.js'></script>
-
-    <!-- The compass object -->
-    <script src='compass.js'></script>
-
-    <!-- The resource object -->
-    <script src='resource.js'></script>
-
-    <!-- The contracts object -->
-    <script src='contracts.js'></script>
-
-    <!-- The piece movement object -->
-    <script src='movement.js'></script>
-
-    <!-- The pirates object -->
-    <script src='pirates.js'></script>
-
-    <!-- The computer opponent object -->
-    <script src='automove.js'></script>
-
-    <!-- The game management object -->
-    <script src='gamemanagement.js'></script>
-
-    <!-- The building object -->
-    <script src='build.js'></script>
-
-    <!-- The building object -->
-    <script src='scoring.js'></script>
-
-    <!-- The main javascript file -->
-    <script src='main.js'></script>
-
-</body>
+<a href="game.html">play game</a>
