Refactoring of main.js file
Aim is to start clear out of main.js file  - so that eventually it just handles game set up and game start.
Three files: human.js, automove.js, pirates.js will cover human, computer, and pirate moves.  
* human player move handling moved to new file human.js
* commentary methods moved to new file commentary.js
* building slider elements moved into existing build.js file

--- a/game.html
+++ b/game.html
@@ -87,7 +87,7 @@
 
 
     <!-- Commentary box -->
-        <div class='commentary'>
+        <div class='commentaryBox'>
             <span id='firstLine'></span><br>
             <span id='secondLine'></span>
         </div>
@@ -126,6 +126,9 @@
     <!-- The compass object -->
     <script src='compass.js'></script>
 
+    <!-- The game commentary object -->
+    <script src='commentary.js'></script>
+
     <!-- The resource object -->
     <script src='resource.js'></script>
 
@@ -134,6 +137,9 @@
 
     <!-- The piece movement object -->
     <script src='movement.js'></script>
+
+    <!-- The human movement object -->
+    <script src='human.js'></script>
 
     <!-- The pirates object -->
     <script src='pirates.js'></script>
