--- a/index.html
+++ b/index.html
@@ -1,1 +1,22 @@
-<a href="game.html">play game</a>
+<!DOCTYPE html>
+
+<!-- This is the main HTML file for the game -->
+<!-- ------------------------------------------>
+<html>
+
+<head>
+    <meta charset="utf-8">
+
+    <!-- Link to style sheets -->
+
+    <link rel="stylesheet" type="text/css" href="board.css">
+  
+</head>
+
+<body>
+
+    <a href="game.html">play game</a>
+
+
+
+</body>
