Whirlpools - random creation and movement
Whirlpools are created / moved once each turn at the start of the pirate moves. Whirlpool position is random, restricted only by tile being on the board and being sea. There is one whirlpool for each quadrant of the board.

whirlpool.js
* New script
* Creation of position array for the whirlpools.
* Implementation of method to manage whirlpool creation / movement.
* gamemanagment.js / index.html updated to reference the new whirlpool script.

move.js
* New moves created for whirlpool creation and movement.

svgdisplay.js
* New method (movePieceNoTransition) to organise the movement of a piece svg without step transitions (different from ship movements which move like piece counters)

piecedisplay.js
* New method (changePosition) implemented to actually move the piece svg.

--- a/index.html
+++ b/index.html
@@ -168,6 +168,9 @@
     <!-- The pirates object -->
     <script src='pirates.js'></script>
 
+    <!-- The whirlpool object -->
+    <script src='whirlpool.js'></script>    
+
     <!-- The computer opponent object -->
     <script src='automove.js'></script>
 
